# changeloginator

./: README.md  pyproject.toml
changeloginator/: __main__.py  app.py  commit_message.py
changeloginator/tests/: test_app.py  test_commit_message.py
